Fix overlap text with long names

--- a/src/main/scss/components/_breadcrumbs.scss
+++ b/src/main/scss/components/_breadcrumbs.scss
@@ -60,6 +60,9 @@
         max-width: 25ch;
         text-overflow: ellipsis;
         white-space: nowrap;
+        overflow: hidden;
+        justify-content: flex-start;
+        text-align: left;
       }
 
       // '/' separator between two items
